--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <header>
-            <h1> For the latest and greatest on IT news, Tech and and how to protect yourself from Cyber bully's
+            <h1> For the latest and greatest on IT news, Tech and how to protect yourself from Cyber bully's
 </h1><link rel="stylesheet" type="text/css" href="style.css">
 
             <br />
